--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -857,12 +857,12 @@ h6 a {
   font-weight: normal;
   font-size: 70px;
   color: #000000;
-  margin-bottom: 40px;
+  margin-bottom: 60px;
 }
 @media only screen and (max-width: 1199px) {
   .speakers .sec-t h2 {
     font-size: 60px;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
   }
 }
 @media only screen and (max-width: 767px) {
@@ -871,7 +871,7 @@ h6 a {
   }
 }
 .speakers h5 {
-  font-family: "Nasalization";
+  font-family: "Poppins", sans-serif;
   font-size: 26px;
 }
 @media only screen and (max-width: 767px) {
@@ -886,13 +886,13 @@ h6 a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: 40px;
+  margin-top: 80px;
   margin-left: -8px;
   margin-right: -8px;
 }
 @media only screen and (max-width: 991px) {
   .speakers .sp-btns {
-    margin-top: 20px;
+    margin-top: 30px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -970,7 +970,7 @@ h6 a {
 }
 
 .gc-single {
-  background-color: #F5F5F7;
+  background-color: #f5f5f7;
   padding: 70px 60px;
   background-image: url("../img/theme/removal.png");
   background-repeat: no-repeat;
