--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -32,7 +32,7 @@
         font-size: 40px;
       }
     }
-    p{
+    p {
       font-size: 35px;
       line-height: 1.2;
       color: $text-color;
@@ -46,7 +46,7 @@
       }
     }
   }
-  p{
+  p {
     font-size: 16px;
     font-weight: 600;
     color: #595959;
@@ -57,12 +57,11 @@
   }
 }
 
-
 /*--------------------------------------------------------------
   ## speakers
 --------------------------------------------------------------*/
 
-.speakers{
+.speakers {
   padding: 80px 0px;
   @media only screen and (max-width: 991px) {
     padding: 60px 0px;
@@ -70,72 +69,71 @@
   @media only screen and (max-width: 767px) {
     padding: 50px 0px;
   }
-  .sec-t{
+  .sec-t {
     h2 {
       font-family: $font-family-nasalization;
       font-weight: normal;
       font-size: 70px;
       color: $bg-black;
-      margin-bottom: 40px;
+      margin-bottom: 60px;
       @media only screen and (max-width: 1199px) {
         font-size: 60px;
-        margin-bottom: 30px;
+        margin-bottom: 40px;
       }
       @media only screen and (max-width: 767px) {
         font-size: 40px;
       }
     }
-  } 
+  }
 
-  h5{
-    font-family: $font-family-nasalization;
+  h5 {
+    font-family: $font-family-poppins;
     font-size: 26px;
     @media only screen and (max-width: 767px) {
       font-size: 20px;
     }
   }
 
-  .sp-btns{
+  .sp-btns {
     display: flex;
     justify-content: center;
-    margin-top: 40px;
-  margin-left: -8px;
-  margin-right: -8px;
-  @media only screen and (max-width: 991px) {
-    margin-top: 20px;
-    flex-direction: column;
-  }
-  a {
-    margin-left: 8px;
-    margin-right: 8px;
+    margin-top: 80px;
+    margin-left: -8px;
+    margin-right: -8px;
     @media only screen and (max-width: 991px) {
-      margin-top: 18px;
+      margin-top: 30px;
+      flex-direction: column;
     }
-  }
+    a {
+      margin-left: 8px;
+      margin-right: 8px;
+      @media only screen and (max-width: 991px) {
+        margin-top: 18px;
+      }
+    }
   }
 }
 
-.team-single{
+.team-single {
   text-align: center;
   border-radius: 16px;
   overflow: hidden;
-  transition: all .2s ease-in;
+  transition: all 0.2s ease-in;
   height: 100%;
-  .team-info{
+  .team-info {
     padding: 15px;
-    h5{
+    h5 {
       font-size: 18px;
       font-weight: 500;
       margin-bottom: 10px;
     }
-    p{
+    p {
       font-size: 13px;
       line-height: 1.3;
     }
   }
-  &:hover{
+  &:hover {
     box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.45);
-    
   }
 }
 
@@ -143,7 +141,7 @@
   ## theme
 --------------------------------------------------------------*/
 
-.theme{
+.theme {
   padding: 80px 0px;
   @media only screen and (max-width: 991px) {
     padding: 60px 0px;
@@ -151,7 +149,7 @@
   @media only screen and (max-width: 767px) {
     padding: 50px 0px;
   }
-  .sec-t{
+  .sec-t {
     h2 {
       font-family: $font-family-nasalization;
       font-weight: normal;
@@ -166,11 +164,11 @@
         font-size: 40px;
       }
     }
-  } 
+  }
 }
 
 .gc-single {
-  background-color: #F5F5F7;
+  background-color: #f5f5f7;
   padding: 70px 60px;
   background-image: url("../img/theme/removal.png");
   background-repeat: no-repeat;
@@ -217,11 +215,10 @@
   }
 }
 
-
 /*--------------------------------------------------------------
   ## expo-h
 --------------------------------------------------------------*/
-.expo-h{
+.expo-h {
   padding: 80px 0px;
   @media only screen and (max-width: 991px) {
     padding: 60px 0px;
@@ -230,9 +227,9 @@
     padding: 50px 0px;
   }
 }
-.expo-son{
+.expo-son {
   padding: 155px 0px;
-  background-image: url('../img/theme/bg-pattern.png');
+  background-image: url("../img/theme/bg-pattern.png");
   background-size: cover;
   background-position: center;
   @media only screen and (max-width: 1199px) {
@@ -244,8 +241,8 @@
   @media only screen and (max-width: 767px) {
     padding: 70px 0px;
   }
-  .sec-t{
-    h2{
+  .sec-t {
+    h2 {
       font-family: $font-family-nasalization;
       font-weight: normal;
       font-size: 70px;
@@ -262,14 +259,14 @@
     }
   }
 
-  .ex-tx{
-    p{
+  .ex-tx {
+    p {
       font-size: 18px;
       margin-bottom: 25px;
       font-weight: 400;
       @media only screen and (max-width: 767px) {
-      font-size: 16px;
-      font-weight: 500;
+        font-size: 16px;
+        font-weight: 500;
       }
       @media only screen and (max-width: 767px) {
         font-size: 15px;
@@ -278,22 +275,21 @@
   }
 }
 
-
 /*--------------------------------------------------------------
   ## api-sec
 --------------------------------------------------------------*/
 
-.api-sec{
+.api-sec {
   padding: 80px 0px;
   @media only screen and (max-width: 991px) {
     padding: 60px 0px;
   }
   @media only screen and (max-width: 767px) {
     padding: 50px 0px;
-  } 
+  }
 
-  .sec-t{
-    h2{
+  .sec-t {
+    h2 {
       text-align: center;
       font-family: $font-family-nasalization;
       font-weight: normal;
@@ -311,6 +307,4 @@
       }
     }
   }
-
- 
 }
