--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -352,6 +352,56 @@ h6 a {
           transform: translateX(3px);
 }
 
+.btn-outline2 {
+  text-decoration: none;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 13px;
+  font-weight: 600;
+  color: #ff0000;
+  background-color: transparent;
+  border-radius: 5px;
+  border: 2px solid #ff0000;
+  padding: 10px 18px;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+.btn-outline2 svg {
+  height: 13px;
+  margin-left: 10px;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+.btn-outline2 svg path {
+  stroke: #ff0000;
+}
+.btn-outline2:hover {
+  color: #ff0000;
+  -webkit-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.75);
+          box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.75);
+}
+.btn-outline2:hover svg {
+  -webkit-transform: translateX(3px);
+          transform: translateX(3px);
+}
+
+.countdown {
+  text-align: center;
+  height: 100vh; /* Adjust height as needed */
+}
+
+.countdown iframe {
+  display: block;
+  margin: 0 auto; /* Auto margins will center the block element horizontally */
+}
+
 /*--------------------------------------------------------------
 # navbar
 --------------------------------------------------------------*/
