--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,7 +42,8 @@ a {
 a:hover {
   color: #000000;
 }
-a:focus, a:hover {
+a:focus,
+a:hover {
   text-decoration: none;
 }
 
@@ -84,6 +85,31 @@ h6 a {
   font-weight: normal;
 }
 
+h3 {
+  margin-bottom: 10px;
+}
+
+ol {
+  list-style: none;
+}
+
+ul,
+ol {
+  padding-left: 0;
+  margin-left: 0;
+  list-style-position: inside; /* Optional: to keep the bullets/numbers inside the list */
+}
+
+li {
+  padding-left: 0;
+  margin-bottom: 5px;
+}
+
+li::marker {
+  margin: 0;
+  padding: 0;
+}
+
 .scroll-top {
   width: 35px;
   height: 35px;
@@ -92,11 +118,11 @@ h6 a {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   font-size: 18px;
   color: #fff;
   border-radius: 7px;
@@ -112,15 +138,16 @@ h6 a {
 .scroll-top img {
   height: 18px;
   -webkit-transform: scaleY(-1);
-          transform: scaleY(-1);
+  transform: scaleY(-1);
   fill: #ffffff;
 }
-.scroll-top:focus, .scroll-top:hover {
+.scroll-top:focus,
+.scroll-top:hover {
   color: #fff;
   -webkit-transform: translateY(-4px);
-          transform: translateY(-4px);
+  transform: translateY(-4px);
   -webkit-box-shadow: 0 0 0 0.25rem rgba(0, 0, 0, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(0, 0, 0, 0.5);
 }
 
 /*--------------------------------------------------------------
@@ -146,14 +173,14 @@ h6 a {
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .lds-spinner div {
   -webkit-transform-origin: 40px 40px;
-          transform-origin: 40px 40px;
+  transform-origin: 40px 40px;
   -webkit-animation: lds-spinner 1.2s linear infinite;
-          animation: lds-spinner 1.2s linear infinite;
+  animation: lds-spinner 1.2s linear infinite;
 }
 
 .lds-spinner div:after {
@@ -170,86 +197,86 @@ h6 a {
 
 .lds-spinner div:nth-child(1) {
   -webkit-transform: rotate(0deg);
-          transform: rotate(0deg);
+  transform: rotate(0deg);
   -webkit-animation-delay: -1.1s;
-          animation-delay: -1.1s;
+  animation-delay: -1.1s;
 }
 
 .lds-spinner div:nth-child(2) {
   -webkit-transform: rotate(30deg);
-          transform: rotate(30deg);
+  transform: rotate(30deg);
   -webkit-animation-delay: -1s;
-          animation-delay: -1s;
+  animation-delay: -1s;
 }
 
 .lds-spinner div:nth-child(3) {
   -webkit-transform: rotate(60deg);
-          transform: rotate(60deg);
+  transform: rotate(60deg);
   -webkit-animation-delay: -0.9s;
-          animation-delay: -0.9s;
+  animation-delay: -0.9s;
 }
 
 .lds-spinner div:nth-child(4) {
   -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
+  transform: rotate(90deg);
   -webkit-animation-delay: -0.8s;
-          animation-delay: -0.8s;
+  animation-delay: -0.8s;
 }
 
 .lds-spinner div:nth-child(5) {
   -webkit-transform: rotate(120deg);
-          transform: rotate(120deg);
+  transform: rotate(120deg);
   -webkit-animation-delay: -0.7s;
-          animation-delay: -0.7s;
+  animation-delay: -0.7s;
 }
 
 .lds-spinner div:nth-child(6) {
   -webkit-transform: rotate(150deg);
-          transform: rotate(150deg);
+  transform: rotate(150deg);
   -webkit-animation-delay: -0.6s;
-          animation-delay: -0.6s;
+  animation-delay: -0.6s;
 }
 
 .lds-spinner div:nth-child(7) {
   -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
+  transform: rotate(180deg);
   -webkit-animation-delay: -0.5s;
-          animation-delay: -0.5s;
+  animation-delay: -0.5s;
 }
 
 .lds-spinner div:nth-child(8) {
   -webkit-transform: rotate(210deg);
-          transform: rotate(210deg);
+  transform: rotate(210deg);
   -webkit-animation-delay: -0.4s;
-          animation-delay: -0.4s;
+  animation-delay: -0.4s;
 }
 
 .lds-spinner div:nth-child(9) {
   -webkit-transform: rotate(240deg);
-          transform: rotate(240deg);
+  transform: rotate(240deg);
   -webkit-animation-delay: -0.3s;
-          animation-delay: -0.3s;
+  animation-delay: -0.3s;
 }
 
 .lds-spinner div:nth-child(10) {
   -webkit-transform: rotate(270deg);
-          transform: rotate(270deg);
+  transform: rotate(270deg);
   -webkit-animation-delay: -0.2s;
-          animation-delay: -0.2s;
+  animation-delay: -0.2s;
 }
 
 .lds-spinner div:nth-child(11) {
   -webkit-transform: rotate(300deg);
-          transform: rotate(300deg);
+  transform: rotate(300deg);
   -webkit-animation-delay: -0.1s;
-          animation-delay: -0.1s;
+  animation-delay: -0.1s;
 }
 
 .lds-spinner div:nth-child(12) {
   -webkit-transform: rotate(330deg);
-          transform: rotate(330deg);
+  transform: rotate(330deg);
   -webkit-animation-delay: 0s;
-          animation-delay: 0s;
+  animation-delay: 0s;
 }
 
 @-webkit-keyframes lds-spinner {
@@ -278,11 +305,11 @@ h6 a {
   display: -ms-inline-flexbox;
   display: inline-flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   font-size: 13px;
   font-weight: 600;
   color: #ffffff;
@@ -305,11 +332,11 @@ h6 a {
 .btn-solid:hover {
   color: #ffffff;
   -webkit-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.75);
-          box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.75);
 }
 .btn-solid:hover svg {
   -webkit-transform: translateX(3px);
-          transform: translateX(3px);
+  transform: translateX(3px);
 }
 
 .btn-outline {
@@ -318,11 +345,11 @@ h6 a {
   display: -ms-inline-flexbox;
   display: inline-flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   font-size: 13px;
   font-weight: 600;
   color: #000000;
@@ -345,11 +372,11 @@ h6 a {
 .btn-outline:hover {
   color: #000000;
   -webkit-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.75);
-          box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.75);
 }
 .btn-outline:hover svg {
   -webkit-transform: translateX(3px);
-          transform: translateX(3px);
+  transform: translateX(3px);
 }
 
 .btn-outline2 {
@@ -358,11 +385,11 @@ h6 a {
   display: -ms-inline-flexbox;
   display: inline-flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   font-size: 13px;
   font-weight: 600;
   color: #ff0000;
@@ -385,11 +412,11 @@ h6 a {
 .btn-outline2:hover {
   color: #ff0000;
   -webkit-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.75);
-          box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.75);
 }
 .btn-outline2:hover svg {
   -webkit-transform: translateX(3px);
-          transform: translateX(3px);
+  transform: translateX(3px);
 }
 
 .countdown {
@@ -461,14 +488,14 @@ h6 a {
     height: 38px;
   }
 }
-.navbar .navbar-nav {
-  /** Large devices (desktops, 992px and up) **/
-}
+/* .navbar .navbar-nav {
+  /** Large devices (desktops, 992px and up) 
+} */
 @media (min-width: 992px) {
   .navbar .navbar-nav {
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
   }
 }
 .navbar .navbar-nav .nav-item {
@@ -501,7 +528,12 @@ h6 a {
     color: #000;
   }
 }
-.navbar .navbar-nav .nav-item a:hover, .navbar .navbar-nav .nav-item a.active {
+.navbar .navbar-nav .nav-item a:hover,
+.navbar .navbar-nav .nav-item a.active {
+  color: #000000;
+  font-weight: 700;
+}
+.active {
   color: #000000;
   font-weight: 700;
 }
@@ -528,7 +560,7 @@ h6 a {
     padding: 15px 12px 20px 12px;
     background-color: #fff;
     -webkit-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
-            box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
   }
 }
@@ -578,7 +610,7 @@ h6 a {
   z-index: 99;
   background-color: #ffffff;
   -webkit-box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.3);
   -webkit-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
 }
@@ -619,11 +651,11 @@ h6 a {
   display: -ms-inline-flexbox;
   display: inline-flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   border: 0;
   border-radius: 5px;
   text-align: center;
@@ -638,7 +670,7 @@ h6 a {
 }
 .nav-social .nav-item .apply-btn:hover {
   -webkit-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.75);
-          box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.75);
 }
 .nav-social .nav-item .apply-btn img {
   height: 14px;
@@ -649,7 +681,7 @@ h6 a {
   ## hero-area
 --------------------------------------------------------------*/
 .hero-area {
-  background-image: url("../img/hero/woman.png");
+  background-image: url("../img/hero/statue.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom right;
@@ -662,14 +694,14 @@ h6 a {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 @media only screen and (max-width: 1399px) {
   .hero-area {
@@ -702,8 +734,8 @@ h6 a {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: end;
+  -ms-flex-align: end;
+  align-items: end;
   font-family: "Nasalization";
   font-weight: normal;
   font-size: 56px;
@@ -934,8 +966,8 @@ h6 a {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   margin-top: 80px;
   margin-left: -8px;
   margin-right: -8px;
@@ -945,8 +977,8 @@ h6 a {
     margin-top: 30px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
 }
 .speakers .sp-btns a {
@@ -981,7 +1013,7 @@ h6 a {
 }
 .team-single:hover {
   -webkit-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.45);
-          box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.45);
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.45);
 }
 
 /*--------------------------------------------------------------
@@ -1076,7 +1108,7 @@ h6 a {
 }
 .gc-single:hover {
   -webkit-transform: scale(1.01);
-          transform: scale(1.01);
+  transform: scale(1.01);
 }
 
 /*--------------------------------------------------------------
@@ -1413,7 +1445,7 @@ h6 a {
   width: 200px;
   height: 55px;
   -o-object-fit: contain;
-     object-fit: contain;
+  object-fit: contain;
   -webkit-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
@@ -1449,7 +1481,7 @@ h6 a {
 }
 .sponser .sponser-logo:hover {
   -webkit-transform: scale(1.05);
-          transform: scale(1.05);
+  transform: scale(1.05);
 }
 
 /*--------------------------------------------------------------
@@ -1473,8 +1505,8 @@ h6 a {
 }
 .speakers .btn-outline {
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   font-size: 15px;
   min-width: 200px;
 }
@@ -1555,8 +1587,8 @@ h6 a {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   padding-top: 80px;
   margin-left: -13px;
   margin-right: -13px;
@@ -1619,8 +1651,8 @@ h6 a {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: end;
+  -ms-flex-align: end;
+  align-items: end;
 }
 .footer-logo .footer-l img {
   height: 55px;
