Menu > "Contact Us" hover fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -426,7 +426,7 @@ li::marker {
 
 .countdown iframe {
   display: block;
-  margin: 0 auto; /* Auto margins will center the block element horizontally */
+  margin: 0 auto; /* Auto margins will center the block element horizontally. */
 }
 
 /*--------------------------------------------------------------
